@@ -1,3 +1,11 @@
+2006-01-18  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-play.c:
+	Initial, not-working, port.
+
+	* src/sj-extractor.c:
+	Free a GError.
+
 2006-01-14  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.schemas.in:
